102ネットワーク、FLOOR,CEILING

--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -215,14 +215,17 @@ hostname [ホスト名]
 ``` txt
 netstat [オプション]  
 
--a : すべてのソケット情報を表示する。  
+-a : すべてのソケット情報を表示する。全てのプロトコル(TCP,UDP,UNIXソケット)を表示  
+-l : 接続待ち(LISTEN)のソケットを表示。  
 -c : 状況を1秒ごとにリアルタイムで表示する。  
 -i : ネットワークインターフェースの状態を表示する。  
 -n : アドレスやポートを数値で表示する。(つまり名前解決の必要がない)  
 -p : pidとプロセス名も表示する。  
+-s : 統計情報を表示
 -r : ルーティングテーブルを表示する。  
 -t : TCPポートのみ表示する。  
 -u : UDPポートのみ表示する。  
+-x : UNIXソケットを表示  
 ```
 
 ※ソケット  
