--- a/LPIC/102/11.ネットワークの基礎_問題.md
+++ b/LPIC/102/11.ネットワークの基礎_問題.md
@@ -47,7 +47,7 @@ IPv6のアドレスの説明で正しいものはどれか？3つ選択
 →正解。だけどグローバルユニキャストはわからなかった。  
 
 接頭にuniが付いたらそれは1つという意味。
-ユニキャストはPC動詞が通信するときに1対1で通信する方式の事。
+ユニキャストはPC同氏が通信するときに1対1で通信する方式の事。
 
 グローバルユニキャストアドレスはインターネット上で使用するアドレス。
 リンクローカルアドレスは同一リンク上でのみ有効なアドレス。
@@ -113,5 +113,120 @@ Dataramです。
 
 ---
 
-## 11
+## 11 ×
+ネットワークデーモンから起動されるデーモンは、スタンドアロンデーモンとしても起動できます。  
+次のデーモンの内、スタンドアロンデーモンを起動するデーモンはどれですか？2つ。  
 
+→  
+起動プロセスを選択すればよろしい。  
+なので、sysVinitを採用しているなら、[init]だし、systemdを採用しているなら[systemd]だ。  
+初見では全くわからないが、覚えてしまえばなんてことはない。  
+
+スタンドアロンデーモン : xinitdを経由することなく、initあるいはsystemdから起動されるデーモン  
+xinitd : ネットワークからのサービスリクエストの受付をするデーモン  
+
+※SysV init  
+/etc/rc3.d rc5.d  
+/etc/init.d  
+とかのやつ。  
+
+---
+
+## 12 ×
+アクティブなネットワークの情報とUNIXドメインソケット接続、ルーティングテーブルを表示できるコマンドは？
+
+route
+netstat -r
+ip route show
+
+ルーティングテーブルの表示だけで3種類もあるのか。  
+問題文では、ルーティングテーブル以外にも色々表示する必要があるので、netstat一択となる。  
+
+---
+
+## 13 ×
+netstatコマンドを実行した表示内容の説明で正しいもの3つ。  
+
+あー。これ参考書でやってないので仕方ない。
+
+smtpって文言があるので、smtpサーバーになっている事にしましょう。
+ドメイン名が表示されているので、DNSサーバーになっている事にしましょう。
+Active Internet connectionという文言がある場合SSH接続は成功してるっぽいので、後は対象ですが、localaddressにlocaldomainとあるので、普通にDを選びそうです。
+
+正解はABCですので、多分間違っていたでしょう。  
+
+A : プロトコルTCP,サービス名はSMTP → SMTPサーバー  
+B : プロトコルはUDP,サービス名はdomain(DNSサーバーのサービス名はdomain) → DNSサーバー  
+C : プロトコルはTCP,サービス名はssh(サーバーはsshd)  
+
+注目すべきは4行目のLocal Address見たいですね。  
+ここにサービス名が表示されるので、それを見れば、このサービスが動いているから○○サーバーとして機能していると見ることができるみたい。  
+
+---
+
+## 14 ○
+次の表示結果を得るコマンドラインはどれか？  
+netstat
+
+見た感じ全てのプロトコルが表示されているので、-a。  
+名前解決されているのでは-nはない。こいつはIPアドレスで表示するオプションだった気がする。  
+ルーティングテーブルが表示されている気配はないので-rもない。
+プロトコル指定系の-t -uは意味ない。
+なので、netstat -aですかね。
+
+---
+
+## 15 ×
+インターネットに接続した環境で`netstat -a`,`netstat -r`コマンドを実行したところhangしてしまい何も結果が帰ってこない。
+もっとも考えられる原因は？
+
+→
+-rなので、ルーティングテーブルの参照。  
+-aはDNS必要だけど、それだと-rの説明が付かない。
+コマンドオプションの謝りってあるのか？
+
+インターフェースっぽいNISにしてみますか。
+普通にDNSだった。-rにも関係するのか。メモメモ。
+
+→
+-nを付けないと基本的に名前解決する。
+DNSサーバーから応答がないとハングする。  
+-rでルーティングテーブルの事は一切触れられていない。
+
+※ハングアップ
+PCやアプリケーションから応答がなくなり、操作が出来なくなること  
+
+※NIS(Network Information Service)  
+主にUNIX系OSで利用されるシステム管理ソフトウェアの1つ。  
+同じネットワークに接続された複数のPC間でシステムの設定情報を共有することが出来るシステム。  
+
+---
+
+## 16 ○
+ホストをネットワークに接続しました。  
+このホストとローカルホスト間でIPレベルで接続されているかどうかを確認する一般的なコマンドはどれですか？  
+
+→
+IPレベルなんてping一択
+
+---
+
+## 17 ○
+PINGコマンドが利用しているプロトコルは？
+
+→
+ICPMだよなぁ？
+
+---
+
+## 18
+IPv4の環境でデフォルトゲートウェイを設定しましたが、インターネット上のサーバーにアクセス出来ません。  
+経路のどこに問題があるかをUDP及びICMPパケットを送信して調べたいと考えています。
+実行するコマンドは？  
+
+→
+routepath or traceroute
+プロトコルの指定があるので、どっちかのコマンドがそれを使っているということだろう。
+まぁ応え見ちゃったから`traceroute`らしいんですけどね。  
+
+tracepathはtracerouteよりも機能が少なく、特権を必要とするRAWパケットを生成するオプションもない。  
