ネットワークとその他

--- a/English/その他英単語.md
+++ b/English/その他英単語.md
@@ -26,10 +26,46 @@ LOLのリデンプションは救済って意味だろうな。
 響きはかっこいいんですけど、意味は大したことないです。
 
 
-## 趣味
+・blink  
+明滅する。ちらつく。瞬きする。  
+
+[ブリンクとは【ゲーム用語集】](https://fpsggg.jp/game/blink/)  
+LOLでおなじみ、移動系スキル全般をブリンクというが、意味的にはふわふわしている模様。  
+おそらく、スキルを使った前と後で場所が違うからだろうとのこと。  
+
+・permanent  
+パーマネント  
+長持ちする。  
+[【#ＭＴＧ初心者 向け】　パーマネントってなんだろう？](https://omamesensei2.hatenadiary.jp/entry/2019/02/18/210838)  
+
+``` txt
+髪型のパーマってあるでしょ？
+あれ、実はパーマネントの略だ。
+髪にかけたウェーブが「長く残る」からパーマネント、「長持ちする」と言うんだ。
+ＭＴＧのパーマネントも長持ちする。
+言ってみれば「使い捨てじゃない」ものがパーマネントだ。
+```
+
+・expansion  
+拡張  
+
+・extraction  
+抽出  
+
+・mandate  
+[名詞]  
+委任  
+
+・delegate  
+[名詞]  
+代理人  
+[他動詞]  
+委任する、移譲する  
+
+
 
 ・QED(Quod Erat Demonstrandum)
 かく示された
 
-・ALL WILL BE ONE
+・ALL WILL BE ONE  
 New phyrexia
