--- a/LPIC/102/11.ネットワークの基礎_問題.md
+++ b/LPIC/102/11.ネットワークの基礎_問題.md
@@ -219,7 +219,7 @@ ICPMだよなぁ？
 
 ---
 
-## 18
+## 18 △
 IPv4の環境でデフォルトゲートウェイを設定しましたが、インターネット上のサーバーにアクセス出来ません。  
 経路のどこに問題があるかをUDP及びICMPパケットを送信して調べたいと考えています。
 実行するコマンドは？  
@@ -229,4 +229,243 @@ routepath or traceroute
 プロトコルの指定があるので、どっちかのコマンドがそれを使っているということだろう。
 まぁ応え見ちゃったから`traceroute`らしいんですけどね。  
 
-tracepathはtracerouteよりも機能が少なく、特権を必要とするRAWパケットを生成するオプションもない。  
+→
+traceroute : IPパケットが最終的な宛先ホストにたどり着くまでの経路をトレースして表示する。  
+
+- パケット送信に使用するデフォルトのプロトコルはUDP。  
+- UDPポートのデフォルトは33434番で、送信するたびにインクリメントする。  
+- [-l]オプションを付けることでICMPパケットを送信できる。  
+- routepathはtracerouteよりも機能が少なく、特権を必要とするRAWパケットを生成するオプションもない。  
+
+---
+
+## 19 ×
+あるホストでTCPポート58769が接続待ち状態ですが、このポートをどのプロセスがオープンしているか不明です。  
+プロセスを特定するためのコマンドを2つ選択。  
+
+→  
+netstatとifconfigでは無かろうか。  
+lsofとtcpdumpは明らかに違うと思うけど・・・。  
+netstatはプロトコル名が表示されるのは知っているが、ポート番号まで表示されたっけ？  
+→されてる。LocalAddressとForeingAddressにはIPアドレスとポート番号、名前解決によってホスト名とサービス名が表示される。
+
+→  
+なんとlsofだって。始めて知ったんだが？  
+
+netstat → ネットワークに関する様々な情報を表示するコマンド  
+ifconfig → ネットワークインターフェースに関する操作を行うコマンド  
+lsof → New
+
+●lsof
+プロセスによってオープンされているファイルの一覧を表示するコマンド  
+引数にファイル名をした場合、そのファイルをオープンしているプロセスを表示する。  
+
+``` txt
+lsof [オプション] [ファイル名]
+
+オプション
+-i : オープンしているポートとプロセスを表示する。
+-i:ポート番号 : 指定のポートをオープンしているプロセスを表示する。
+-i:サービス名 : 指定のサービスをオープンしているプロセスを表示する。
+-p プロセスID : 指定したプロセスがオープンしているファイルを表示する。
+-P : ポート番号をサービス名に変換せず、数値のままで表示する。
+```
+
+---
+
+## 20 ○
+ネットワークインターフェースカードethc0のアドレスを192.168.1.1に設定するためのコマンド  
+
+→  
+ネットワークインターフェースの設定や情報の表示はifconfigだった気がする。  
+概要だけはわかるけど設定の仕方は忘れた。  
+ifconfigで正解ではあった。
+
+→  
+ipアドレスの設定  
+ifconfig インターフェス名 IPアドレス  
+
+情報の表示  
+ifconfig単体。  
+
+他のIPアドレス設定コマンドは？
+`ip addr add 10.10.0.5/24 dev eth`  
+
+小豆本の時も同じ疑問を持っていた模様。  
+でも2つしかないならいいかな。  
+
+---
+
+## 21 ×
+ipコマンドの説明で正しいものはどれか？2つ  
+
+→  
+×B,D  
+○A,D  
+
+→  
+ipコマンドはifconfigコマンドに変わる新しいコマンド。  
+なので、ネットワークインターフェースの設定と表示もできる。  
+
+
+---
+
+## 22 ○
+ルーティングテーブルのエントリ追加  
+
+→
+D : route add -net 172.17.0.0 netmask 255.255.0.0 gw 172.16.255.254  
+
+→  
+IPアドレスの設定だけではなく、ルーティングテーブルへのエントリ追加も紛らわしく感じる原因の1つだな。  
+
+---
+
+## 23 ×
+
+cat /proc/sys/net/ipv4/____  
+
+→  
+いや、さっぱりわからんが？  
+このファイルはやったことないと思うけど。  
+
+`ip_forward`だって。  
+やっぱり知らない。  
+
+→  
+
+### /proc/sys/net/ipv4/ip_forwardファイル
+
+- Linuxをルーターにするにはルーティングテーブルの設定の他に、1つのネットワークI/Fから別のネットワークI/Fへのパケットのフォワーディングを許可する設定が必要。  
+- フォーワーディングはカーネル変数ip_forwardの値を1にする事でオンになり、0にすることでオフになる。  
+- カーネル情報なので格納場所は`/proc/sys/net/ipv4/ip_forward`  
+
+---
+
+## 24 ○
+
+デフォルトゲートウェイとして172.16.255.253を追加するコマンドはどれか。  
+
+→
+C : route add default gw 172.16.255.253  
+
+→
+デフォルトゲートウェイ設定コマンド  
+`route add default gw ipアドレス`  
+
+デフォルトルートを指定する場合は、宛先を`default`にする。  
+
+---
+
+## 25 ○
+
+デフォルトルートについての説明で正しいものはどれか。1つ  
+
+→  
+C : ルーティングテーブルのどのエントリにも一致しない時に参照される。  
+
+→
+わかりそうでわからないサイトでデフォルトゲートウェイは最後に参照されるって言われた気がする。  
+というのも、IPのルール的に「この宛先はどこですか？」ってまず一番近いネットワークに問い合わせて、どこにもなかったときに、個々にはないから仕方ないからデフォルトに任せるねって流れになってるって言ってた気がする。
+
+---
+
+## 26 ○
+
+netstat -nr の結果について言えること2つ。  
+
+→  
+A,D  
+
+→  
+ルーティングテーブルは条件に当てはまったものから実行される。  
+192.168.2.1宛は192.168.2.0/24のネットの1番宛と余裕で読めるので、これしかない。  
+
+いや、微妙に違うか？
+別に上からってわけでなくてもよい？
+全部に当てはまらなかったらdgwに行くって認識でいいのかな。  
+ロンゲストマッチ。  
+最も当てはまる条件が長いもの。
+上から順は間違いかも。  
+
+``` txt : 重要
+-nオプションで名前解決しない場合のDestination「0.0.0.0」と表示されるのがデフォルトルート。
+```
+
+---
+
+## 27 ×
+
+デフォルトゲートウェイエントリを削除するコマンドはどれか？3つ。  
+
+→  
+○A : route del default gw 172.17.255.254  
+×B : route del default gw  
+○D : ip route del default  
+
+C : route del default  
+
+→  
+ipコマンドにdelなんて聞いてなかったが、addがあるならあってもいいだろうということで選んだら正解。  
+なぜ省略したのか。  
+
+routeコマンドのデフォの削除にgwの文言は必要ない模様。  
+
+``` txt
+route del default gw IPアドレス or インターフェース名
+route del defualt
+```
+
+---
+
+## 28 ×
+
+ネットワークインターフェースの受信パケット、受信バイト、送信パケット、送信バイト数を表示するコマンドはどれか？2つ。  
+
+→  
+×A,D
+○A,B
+
+ネットワークインターフェースという地点でifconfigかip  
+ip link show の構文なのでDしかない。  
+
+→  
+コマンドの概要の認識はよかったが、ip -sの構文を知らなかったからダメだった。  
+
+`-s link`はデータリンク層(link)の統計情報(statistics)を表示するオプション  
+
+---
+
+## 29 ○
+
+NetworkManagerについて正しい説明2つ。  
+
+→  
+A : ネットワークインターフェースの自動設定ができる  
+C : デフォルトルートの自動設定ができる  
+ネットワークマネージャーというくらいなんだから、自動設定出来ないとね？  
+ネットワークインターフェースまで設定するならデフォルトルートの設定も出来ないとね？  
+
+→  
+特にないが、NetworkManagerが何なのか復習しておく必要がある。  
+
+---
+
+## 30 ×
+
+nmcliの第一引数として指定するものはどれか？3つ。  
+
+→  
+○B : connection
+×D : ethernet
+○E : general
+
+A : device
+
+→  
+覚えるのさぼったからね。仕方ないね。  
+基礎のほうにまとめるからそっち見ればよろしい。  
+
+ethernetとwifiはdeviceのサブコマンド
+
+---
