--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -61,6 +61,12 @@
 そのほかにも色々あるけど、代表的なのはこんなところじゃないかな。  
 因みによく聞く103万円ってのは所得税が発生するラインが103万円だからっぽい。  
 
+## 丸め とは？
+
+数値を一定の規則に従って、近似値で表現すること。  
+端数処理。  
+つまり、四捨五入とか切り捨て、切り上げがそうって事。  
+
 ---
 
 ## マイクロサービス
@@ -133,4 +139,72 @@ PCに周辺機器や拡張カード等を接続した際にハードウェアと
 
 ---
 
+## 同じ値が入力されても実行されるようにする
+
+キーバインドをすべて取得。
+LostFocusでイベント実行。
+フラグで値が変更されたかを管理。
+同じ値は許可しないといけないので、その時のアイディアをメモすればおｋ。
+
+---
+
+## アベンド(abend)
+
+異常終了の事。  
+おそらく[abnormal end]の略。  
+
+``` txt : アベンドで調べたら一番上に出てくる説明
+アプリケーションなどで実行中の処理が、プログラムのバグ等の理由によって、通常の手順で終了出来なくなった状態のこと。
+IBMのメインフレーム「system/360」で用いられたエラーメッセージの一種。
+アベンドは異常終了と呼ばれる場合もある。
+```
+
+---
+
+## ハングアップ(hang up)
+
+PCやアプリケーションから応答がなくなり、操作が出来なくなること  
+
+``` txt : 調べたら一番上に出てくる説明
+利用中のアプリケーションやPCが停止し、(あるいは正常に動作しなくなり)、入力装置からの入力が出来なくなった状態の事。
+操作を全く受け付けなくなった状態。
+システムの再起動以外に復帰の方法はない。
+```
+
+---
+
+## フリーズ(Fleeze)
+
+完全にプログラムが固まった場合と、処理が追いつかず、固まっている場合の2つを含む模様。
+
+``` txt : e-Words
+コンピューターやソフトウェアの動作が停止して、操作を受け付けなくなる現象や状態。
+時間経過や特定の操作で解除されるような一時体な停止状態と、まったく制御不能な完全な停止状態がある。
+```
+
+## クラッシュ(Crash)
+
+OS,プログラム,ソフトウェア内で想定外の以上が発生し、異常終了する現象。
+
+``` txt : e-Words
+IT分野では、ストレージが物理的に破損して記憶内容が損なわれることや、実行中のソフトウェアが突如として異常終了することを指す
+```
+
+## 異常終了系用語早見表
+
+ハングアップ : 停止  
+フリーズ : 停止、もしくは処理中  
+クラッシュ : プログラム自体が強制終了してOSに制御が戻る時はこっちを使うかも。
+アベンド : ???  
+
+大体フリーズかクラッシュで済む。
+ハングアップはあまり使わないような？
+アベンドに関してはメインフレームの時代の話なので、ほとんど使われない気がする。
+
+--
+
 ## 雑記
+
+・FLOORとCEILINGの引数は小数点の指定なのか？
+
+・FLOPSって何だっけ？
