--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -42,9 +42,13 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 というか、メーカーがペットボトルバージョンも出してるので問題ないだろう。
 黒酢とか強めやつはちょっと考えたほうがいいっぽい。  
 
+
+[寝床が暖かくなる毛布の順番](https://weathernews.jp/s/topics/201901/070075/)  
+やっぱり毛布を一番下にするのがベストらしい。
+
 ---
 
-## 運合系
+## 運動系
 
 ### ミッドフット
 
@@ -99,13 +103,14 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 
 パイソンの参考書を出荷する時の話。  
 メジャーで図って3㎝だったけど、ヤマトで測ってもらったらギリギリOKもらえた。  
-こういう時のために、梱包は新聞紙までにとどめて、封筒を一緒に持っていき、
+こういう時のために、梱包は新聞紙までにとどめて、封筒を一緒に持っていき、  
 ヤマトさんに計測してもらってOKなら封筒で駄目だったら専用の箱って切り替えができるようにしたほうがいい。  
 
 ### ゆうパケットプラスの箱は再利用可能
 
 調べたら再利用可能ということ。  
-程度にもよるみたいだが、本当にこれで問題がないなら、やってみてまた結果を書き込みたい。  
+程度にもよるみたいだが、本当にこれで問題がないなら、やってみて結果を書き込みたい。  
 
 行けた。  
 ただ、受付のお兄ちゃんが裏に確認に行ったので、程度の確認はしてもらったほうがいいのかもしれない。  
+というわけで、再利用の場合は郵便局の窓口がマストかな。  
