--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -179,6 +179,9 @@ help
 ネットワークの状態を表示する  
 `nmcli networking connectivity`  
 
+My-WiFiに接続する
+`nmcli device wifi connect My-Wifi`
+
 ### hostnamectlコマンド  
 
 ホスト名を設定するコマンド  
