--- a/LPIC/102/11.ネットワークの基礎_問題.md
+++ b/LPIC/102/11.ネットワークの基礎_問題.md
@@ -469,3 +469,33 @@ A : device
 ethernetとwifiはdeviceのサブコマンド
 
 ---
+
+## 31 ○
+
+nmcliでwi-fiのアクセスポイント、my-wifiに接続するコマンドはどれか？
+
+→
+C : nmcli device wifi connect My-WiFi  
+
+機能復習したばかりだからね。
+D : nmcli connect wifi device My-Wifi
+deviceがそんなところに出てくるのはおかしいのでない。
+A,BはWifi何ていう第一引数はない。  
+
+---
+
+## 32 ○
+
+ホスト名をxamhost.localdomainに変更したい。コマンド名は？  
+___ examhost.localdomain  
+
+→
+hostname
+
+他にも
+hostnamectl
+/etc/hostnameの直接編集
+があったはず。  
+
+→
+
