--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -205,6 +205,8 @@ IT分野では、ストレージが物理的に破損して記憶内容が損な
 
 ## 雑記
 
-・FLOORとCEILINGの引数は小数点の指定なのか？
+・FLOORとCEILINGの引数は小数点の指定なのか？  
+→微妙に違う。小数点第何位で切り上げ、切り捨てでは無く、基準値に近づけるように切り上げと切り捨てを行う模様。  
 
 ・FLOPSって何だっけ？
+
