たくさんまとめ

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -25,7 +25,7 @@
 ・参加者との対話が可能な点が今までのネット上のセミナーと大きく違うのが特徴とか何とか。  
 ・Zoomなんかが主たるサービスになる。(他 Microsoft Terms等)  
 
-## 締めとは？
+## 締め とは？
 
 金銭や数量などの合計を出すこと。  
 会社で行った取引を全て確定させるための区切りのこと。  
@@ -40,6 +40,28 @@
 
 うちの場合、支払い日は10日だけど、だからと行って10日締めなわけではないはず。  
 だから、締め日と支払い日は違っても別におかしな事ではないんだな。  
+
+## 丸め とは？
+
+数値を一定の規則に従って、近似値で表現すること。  
+端数処理。  
+普段何気なくやっている、四捨五入とか切り捨て、切り上げが丸め処理って事。  
+
+## 棚卸し とは？
+
+[棚卸しの意味・英語や目的とは？在庫管理作業の方法、粉飾決算になる場合](https://biz.moneyforward.com/accounting/basic/47431/)  
+
+棚卸しとは?  
+資産の数量や価値等を実際に確認すること。  
+
+棚卸しの目的  
+①実際の在庫(数量)を確認して、帳簿上記録された数量と寺師合わせること。  
+②棚卸資産の状態需要を見て、商品の価値が取得価格より低下していないか確認すること。  
+
+実際に確認して、会計上資産価値を金額として確定することが目的。  
+年に1回、決算時において棚卸し作業が必要。  
+
+---
 
 ## 扶養とは？
 
@@ -60,12 +82,6 @@
 
 そのほかにも色々あるけど、代表的なのはこんなところじゃないかな。  
 因みによく聞く103万円ってのは所得税が発生するラインが103万円だからっぽい。  
-
-## 丸め とは？
-
-数値を一定の規則に従って、近似値で表現すること。  
-端数処理。  
-つまり、四捨五入とか切り捨て、切り上げがそうって事。  
 
 ---
 
@@ -139,58 +155,9 @@ PCに周辺機器や拡張カード等を接続した際にハードウェアと
 
 ---
 
-## 同じ値が入力されても実行されるようにする
+## 異常終了系の用語まとめ
 
-キーバインドをすべて取得。
-LostFocusでイベント実行。
-フラグで値が変更されたかを管理。
-同じ値は許可しないといけないので、その時のアイディアをメモすればおｋ。
-
----
-
-## アベンド(abend)
-
-異常終了の事。  
-おそらく[abnormal end]の略。  
-
-``` txt : アベンドで調べたら一番上に出てくる説明
-アプリケーションなどで実行中の処理が、プログラムのバグ等の理由によって、通常の手順で終了出来なくなった状態のこと。
-IBMのメインフレーム「system/360」で用いられたエラーメッセージの一種。
-アベンドは異常終了と呼ばれる場合もある。
-```
-
----
-
-## ハングアップ(hang up)
-
-PCやアプリケーションから応答がなくなり、操作が出来なくなること  
-
-``` txt : 調べたら一番上に出てくる説明
-利用中のアプリケーションやPCが停止し、(あるいは正常に動作しなくなり)、入力装置からの入力が出来なくなった状態の事。
-操作を全く受け付けなくなった状態。
-システムの再起動以外に復帰の方法はない。
-```
-
----
-
-## フリーズ(Fleeze)
-
-完全にプログラムが固まった場合と、処理が追いつかず、固まっている場合の2つを含む模様。
-
-``` txt : e-Words
-コンピューターやソフトウェアの動作が停止して、操作を受け付けなくなる現象や状態。
-時間経過や特定の操作で解除されるような一時体な停止状態と、まったく制御不能な完全な停止状態がある。
-```
-
-## クラッシュ(Crash)
-
-OS,プログラム,ソフトウェア内で想定外の以上が発生し、異常終了する現象。
-
-``` txt : e-Words
-IT分野では、ストレージが物理的に破損して記憶内容が損なわれることや、実行中のソフトウェアが突如として異常終了することを指す
-```
-
-## 異常終了系用語早見表
+### 早見表
 
 ハングアップ : 停止  
 フリーズ : 停止、もしくは処理中  
@@ -201,12 +168,173 @@ IT分野では、ストレージが物理的に破損して記憶内容が損な
 ハングアップはあまり使わないような？
 アベンドに関してはメインフレームの時代の話なので、ほとんど使われない気がする。
 
---
+### アベンド(abend)
+
+異常終了の事。  
+おそらく[abnormal end]の略。  
+
+``` txt : アベンドで調べたら一番上に出てくる説明
+アプリケーションなどで実行中の処理が、プログラムのバグ等の理由によって、通常の手順で終了出来なくなった状態のこと。
+IBMのメインフレーム「system/360」で用いられたエラーメッセージの一種。
+アベンドは異常終了と呼ばれる場合もある。
+```
+
+### ハングアップ(hang up)
+
+PCやアプリケーションから応答がなくなり、操作が出来なくなること  
+
+``` txt : 調べたら一番上に出てくる説明
+利用中のアプリケーションやPCが停止し、(あるいは正常に動作しなくなり)、入力装置からの入力が出来なくなった状態の事。
+操作を全く受け付けなくなった状態。
+システムの再起動以外に復帰の方法はない。
+```
+
+### フリーズ(Fleeze)
+
+完全にプログラムが固まった場合と、処理が追いつかず、固まっている場合の2つを含む模様。
+
+``` txt : e-Words
+コンピューターやソフトウェアの動作が停止して、操作を受け付けなくなる現象や状態。
+時間経過や特定の操作で解除されるような一時体な停止状態と、まったく制御不能な完全な停止状態がある。
+```
+
+### クラッシュ(Crash)
+
+OS,プログラム,ソフトウェア内で想定外の以上が発生し、異常終了する現象。
+
+``` txt : e-Words
+IT分野では、ストレージが物理的に破損して記憶内容が損なわれることや、実行中のソフトウェアが突如として異常終了することを指す
+```
+
+---
+
+## ボリュームライセンス
+
+福田さんのパソコンにウィルスバスターが入ってないとかで、インストールしたいけどその場合、富田さんに言わないと無理でしょってなって、  
+ライセンスで管理してるから尚更富田さんでしょってなった時に福田さんが発した。  
+まとめて買えばお得、って販売形態だと思ってたが、具体的に知らなかったのでまとめ。  
+
+``` txt : 一番上の説明
+ソフトウェア販売形態の一つ。
+多数のライセンス(使用許諾権)をまとめて提供する仕組み。
+個別に購入するよりも低価格で提供されるほか、ライセンスコード(シリアルナンバーなど)のみ販売して不要なパッケージやマニュアル、
+記録媒体が大量に発生しないなどのメリットがある。
+```
+
+購入するのは権利。  
+まとめ買いでお安く。  
+
+---
+
+## FLOPS
+
+FLOPSってなんだっけ？  
+基本情報でやったと思うけど、パッと出てこなかったのでまとめ。  
+
+FLOPS(FLoating point number Operation Per Second)  
+1秒間に浮動小数点演算が何回できるかの指標値。または性能値。  
+
+こいつ自体は単位でしかない。  
+頭にギガとかテラがついて、初めてどれくらい計算できるかわかるようになる。  
+
+[お答えします スパコンQ&A](https://www.fujitsu.com/jp/about/businesspolicy/tech/k/qa/k02.html)  
+1G（ギガ＝10の9乗）フロップス：1秒間に 1,000,000,000回計算できる  
+1T（テラ＝10の12乗）フロップス：1秒間に 1,000,000,000,000回計算できる  
+1P（ペタ＝10の15乗）フロップス：1秒間に 1,000,000,000,000,000回計算できる  
+
+---
+
+## システムドライブ
+
+東さんが「システムドライブにSATAを使うのはどうなんだ？」みたいなこと言ってたのでまとめ。  
+
+``` txt : 一番上に出てくる説明<http://koyocha.blog.fc2.com/blog-entry-29.html>
+オペレーティングシステムがインストールされているハードディスクドライブのこと。
+メーカー製のパソコンでも自作パソコンでも意図して変更しない限りCドライブとなる。
+
+データドライブとはOSがインストールされていないHDDのこと。
+意図して変更しない限りDドライブを含む以降のドライブがこれに当たる。
+
+OSがインストールされているドライブにいくら音楽、動画、画像ファイルやメールなどが入っていようがそれはシステムドライブである。
+```
+
+なんてことはない。これだけの意味だ。  
+ここにSATAが関わるとつまりどういうことを言いたかったのだろうか。  
+単純に遅いってことか？
+
+---
+
+## 車輪の再発明
+
+地味に意味を知らなかった。  
+
+``` txt : うぃき<https://ja.wikipedia.org/wiki/%E8%BB%8A%E8%BC%AA%E3%81%AE%E5%86%8D%E7%99%BA%E6%98%8E>
+「広く受け入れられ確立されている技術や解決法を知らずに、または意図的に無視して再び一から作ること」を指すための慣用句。
+一般的には、古くからタダで皆に使われている技術や技法があるのなら、それをそっくりそのまま模倣して使えば、ほとんど時間もかからず労力もほとんど使わずに済む。
+それなのに、わざわざまた自分でゼロからアイディアを練る段階から始めていては、時間・労力・コストなどの無駄なので、「車輪の再発明」は基本的には、時間の無駄、愚かなこと、ばかばかしいこと、というニュアンスで用いられている。
+
+特にIT業界、なかでもSEやプログラマの間で好んで用いられている表現、概念である。
+
+再発明を行ってしまう理由としては、「既存のものの存在を知らない」「既存のものがあることを知っていたはずなのに、つい思い出しそこなった」「既存のものを一応探したが、見つけそこなった」「既存のものが意図的に隠されていた（時間を無駄遣いするように罠をかけられていた）」「既存のものの意味を誤解している」などということがある。
+```
+
+つまり、「誰かが既に生み出した何かを自分で生み出そうとして時間を無駄にすること」の意味。  
+Wikiの説明がいちいち面白い。  
+
+---
 
 ## 雑記
 
-・FLOORとCEILINGの引数は小数点の指定なのか？  
+〆・FLOORとCEILINGの引数は小数点の指定なのか？  
 →微妙に違う。小数点第何位で切り上げ、切り捨てでは無く、基準値に近づけるように切り上げと切り捨てを行う模様。  
 
-・FLOPSって何だっけ？
 
+技術力。
+最小の労力で顧客に解決方法を提供できるかどうか。
+まぁ、それはちょっと綺麗に言いすぎだな。
+
+とりあえず、なんでも知ってるかどうか？とか、それを実現するための組み合わせを知っているだとか、
+そういう具体とも抽象とも取れない感じでいいんじゃないかな。
+
+
+仕事の時間を使ってやる勉強は楽しいなぁ。
+これくらいグダグダやるのが一番いいな。
+流石にそろそろ仕事するか。
+
+
+今日は左足がピクピクしたな。
+気持ちよかったのは確かだが、それだけでは寝れなかった。
+まぁ、休日にしっかり休めたので、つらくはない。
+朝からパソコン立ち上げて、ちょっと勉強できるくらいには活動的だった。
+なんなら仕事の時間を利用して勉強するくらいふてぶてしいほどだ。
+
+
+目を温めるアイテム。  
+とりあえず、ホットタオルで何とかするけど、そのうち面倒になって専用のモノを買ってしまいそう。  
+
+[疲れ目に悩んでいるあなたに。自宅で手軽にできる改善・予防方法を紹介](https://www.aigan.co.jp/aigan_style/column/132)  
+
+- 目薬を指して5分目を瞑る  
+- 目をマッサージする  
+- 目を温める  
+タオルを水で濡らして固く絞ったら、600Wの電子レンジで40秒ほど加熱する。
+
+帰ったらまず目を休めることからやってみるのが一番いいかねー。
+
+
+
+萬君がやっているのは実学。
+俺がやっているのは座学。
+どちらが役にやつのかは言うまでもなかろう。
+そりゃ、差もつけられるわな。
+
+
+・目の疲れ
+・XAMLの即時反映サンプル
+・ボリュームライセンス
+・FLOPS
+・システムドライブ
+・車輪の再発名
+・EDI,EOS,BMS
+・represent
+・棚卸とは
