ネットワーク進めた

--- a/LPIC/102/11.ネットワークの基礎_問題.md
+++ b/LPIC/102/11.ネットワークの基礎_問題.md
@@ -496,6 +496,111 @@ hostname
 hostnamectl
 /etc/hostnameの直接編集
 があったはず。  
+てか、この問題、hostnamectlでもよかったのでは？何が違いがあったのか？
+あー、hostnamectlのばあい `set-hostname <HOSTNAME>`ってやらないといけないんだ。納得。  
+
+因みにhostnameは一時的。再起動すると基に戻る。  
+hostnamectlと/etc/hostnameの変更は永続的。  
+hostnamectlは再起動したら反映される。  
+hostnameは即時反映。  
+うん。ややこしいな。
+
+`hostname <HOSTNAME>`  
+`hostnamectl set-hostname <HOSTNAME>`  
+
+---
+
+## 33 ○
+
+/etc/hostsのエントリの正しい記述はどれか？2つ  
+
+→  
+ipv6かv4か。  
+前に書くか後ろに書くか。  
+その組み合わせでしかない。  
+
+A,D
+先にIPアドレス。後にホスト名。  
+なぜなら、先にIPアドレスを書いている例が多いから。
+これはつまり引っ掻けるためにやっているはず!!!
+
+勝ち申した。
+
+→  
+
+/etc/hostsファイルとは？  
+IPアドレスとホスト名の対応情報を格納するファイル  
+
+書式 : `IPアドレス ホスト名 別名 ...`
+
+---
+
+## 34 ×
+
+DNSクライアントホスト上で、どのDNSサーバーに対し問い合わせを行うべきかを定義するファイルの名前を絶対パスで記述してください。  
+
+→  
+言い回しが。
+/etc/nsswitchはどの順番で問い合わせるかだったな。  
+他に2つあったが、何だったか。  
+
+×/etc/network
+○/etc/resolv.conf
+
+超ど忘れした。  
+
+---
+
+## 35 ○
+
+DNSサービスを利用するために、適切なファイルにDNSサーバのIPアドレスを正しく指定したが、ネットワークアプリケーションが名前解決出来ない。  
+考えられる原因は何か？1つ。  
+
+→  
+D  
+まぁ、この脈絡で行けば、/etc/nsswitch.confが来るよね。  
+「ネットワークインターフェースのIPアドレスが正しく設定されていない」が一番迷ったかな。  
+でも、名前解決できないって書いてあるから、これはそもそも通信ができない状態だから違うか。  
+
+---
+
+## 36 ×
+
+``` txt : /etc/resolv.conf
+search mylpic.com
+nameserver 172.16.1.1
+nameserver 192.168.20.1
+```
+
+この記述内容で正しいものはどれか？1つ。  
+
+→  
+A
 
 →
+明日ここをまとめる。  
 
+---
+
+## 37 ○
+
+逆引きDNSとは何ですか？1つ。
+
+→  
+IPアドレスからドメイン名を求めることでは？  
+C  
+これは特にいうことはない。  
+
+---
+
+## 38 ○
+
+DNSのサービスを利用して、ホスト名に対応したIPアドレスを取得したい場合に使用するコマンドについての説明で適切なものはどれか？2つ  
+
+→  
+hostnameはホスト名なので違う。  
+dnsdomainnameは聞いたことがない。  
+なのでA,B hostコマンドとdigコマンド  
+
+→  
+digは直近でやったからわかるけど、hostは再確認しないと。  
