ネットワーク進めた

--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -477,6 +477,7 @@ example.com : ドメイン名
 ### /etc/resolv.confファイル
 
 どこにあるDNSサーバーを参照するかを設定するファイル  
+ファイル名はresolveではなく**resolv**なので注意。  
 
 ``` txt
 domain infraeye.com
@@ -484,9 +485,33 @@ search infraeye.com
 nameserver 192.168.231.2
 ```
 
-domain行 : このホストが所属するドメイン名を記述する。  
-serach行 : ドメイン名の省略時に補完するドメイン名を記述。  
-nameserver行 : DNSサーバーのIPアドレスを記述。複数行を記述可能。応答が無ければ次の行を参照する。  
+- domain :  
+このホストが所属するドメイン名を記述する。  
+ドメイン名を含まないホスト名を検索する場合、このドメイン内を検索する。  
+- serach :  
+ドメイン名の省略時に補完するドメイン名を記述。  
+複数指定可能。  
+左から右へ検索していく。  
+**searchの指定を行った場合、ドットがないホスト名についてはsearchで指定したドメインを検索する。**  
+- nameserver :  
+DNSサーバーのIPアドレスを記述。  
+nameserverの指定は3台まで。  
+応答が無ければ次の行を参照する。  
+
+domainとsearchはどちらか片方を指定する。  
+両方指定した場合は後のほうが有効になる。  
+
+#### ドメイン
+
+<https://t-tel.net/domain/092/>  
+
+`https://www.example.com`  
+ホスト名 : www  
+ドメイン名 : example.com  
+FQDN : www.example.com  
+
+ホスト名 + ドメイン名 = FQDN  
+Fully Qualified Domain Name  
 
 ### /etc/nsswitch.confファイル  
 
@@ -543,18 +568,22 @@ nslookupコマンドはDNSサーバーからの応用を加工して表示する
 dig [オプション] [@DNSサーバー名] ホスト名orドメイン名 [検索タイプ]
 
 オプション
--x : IPアドレスからホスト名を検索する
+-x : IPアドレスからホスト名を検索する(逆引き)
 
 検索タイプ
-a : ipアドレス
+a : ipアドレス(Address)(デフォルト)
 aaaa : ipv6アドレス
 any : 全ての情報
-mx : メールサーバーの情報
-ns : ネームサーバーの情報
+mx : メールサーバーの情報(Mail Exchanger)
+ns : ネームサーバーの情報(Name Server)
++short : 詳細情報を省く
 ```
 
 lpi.jpのメールサーバー情報を問い合わせる  
 `dig lpi.jp mx`  
+
+69.90.69.237のホスト名を問い合わせる(詳細情報を省く)  
+`dig -x 69.90.69.237 +short`
 
 ### whoisコマンド  
 
