--- a/LPIC/102/11.ネットワークの基礎_問題.md
+++ b/LPIC/102/11.ネットワークの基礎_問題.md
@@ -575,10 +575,18 @@ nameserver 192.168.20.1
 この記述内容で正しいものはどれか？1つ。  
 
 →  
-A
+×A : 常にmylpic.comを検索する  
+○B : ドットがないホスト名はmylpic.comを検索する。  
 
-→
-明日ここをまとめる。  
+まじか・・・。  
+nameserverは上から順って覚えたからなんてことはなかったけど、searchの理解が疎かだったな。  
+というか、もう一つあったよな。何だっけ。  
+
+→  
+**searchの指定を行った場合、ドットがないホスト名についてはsearchで指定したドメインを検索する。**  
+nameserverの指定は3台まで。  
+上から順に実行する。  
+応答がタイムアウトした場合などで次のDNSサーバーへの問い合わる。  
 
 ---
 
@@ -602,5 +610,67 @@ hostnameはホスト名なので違う。
 dnsdomainnameは聞いたことがない。  
 なのでA,B hostコマンドとdigコマンド  
 
+一応dnsdomainnameコマンドは存在する見たい。  
+システムのDNSドメイン名を表示するコマンドだって。  
+
 →  
 digは直近でやったからわかるけど、hostは再確認しないと。  
+
+``` txt
+host [オプション] [-t 問い合わせタイプ] ドメイン名 [DNSサーバー]
+
+正引き ホスト名からIPアドレスを取得する
+host mail.lpi.org
+逆引き IPアドレスからホスト名を取得する
+host 69.90.69.237
+
+dig [@DNSサーバ] ドメイン [問い合わせタイプ]
+
+正引き
+dig mail.lpi.org
+逆引き
+dig -x 69.90.69.237 +short
+```
+
+---
+
+## 39 ○
+
+ポート番号25番でサービスするのはどのようなホストか？  
+
+→  
+A : SMTPサーバー  
+OP25B(Outbound Port 25 Blocking)って言うもんね。  
+outbound : 外国行きの、市街に向かう  
+外部の25番ポートに接続させない。  
+外部の25番ポートに接続させたくば、ISPの認証を受けないと送信出来ないようにした。  
+因みに25の代わりのサブミッションポートが587(SMTP AUTH)ね。  
+
+ウェルノウンポートも覚えなおさないとな。  
+
+---
+
+## 40 ×
+
+次のプログラムの内、メール転送エージェント(MTA)はどれか？3つ  
+
+→
+A : Postfix
+E : Thunderbird
+
+でもサンダーバードってメーラーっていうクライアントソフトであって、転送エージェントとはまた別では？  
+正直知らないので答えを見ます。  
+
+A : Postfix  
+B : Sendmail  
+D : Exim  
+の3つだそうです。  
+メール転送エージェントについては参考書になかったので仕方ないかと。  
+
+---
+
+# 41
+
+
+
+今日でネットワーク終わるな。
