メール関係少し、勉強したいリスト追加

--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -138,6 +138,38 @@ A.aa = B.aa
 LEFT OUTER JOIN B ON oya
 でよいのでは説。
 
+
+order by then by
+領収名
+領収　とは
+標準原価法
+会計用語
+
+縁が切れた
+https://damasarenaiwa.com/2018/01/29/en-3/
+
+シリアライズしたデータ 見る
+https://social.msdn.microsoft.com/Forums/vstudio/ja-JP/4fb1e972-c19b-4bbd-b828-82cb783c13e8/12458125021247212455124631248812434124711252212450125211245212?forum=csharpgeneralja
+http://funini.com/kei/java/serialize.shtml
+
+クラサバ 古い
+https://xtech.nikkei.com/it/article/COLUMN/20070820/279919/
+
+棚卸しとは
+https://www.freee.co.jp/kb/kb-accounting/Inventory/
+
+
+sqlserver データベース名 一覧
+[SQL Server でデータベースの一覧を表示する](https://docs.microsoft.com/ja-jp/sql/relational-databases/databases/view-a-list-of-databases-on-an-instance-of-sql-server?view=sql-server-ver15)
+
+
+eventaggregator c# example
+
+at System.Data.SqlClient.SqlConnection.OnError(SqlException exception, Boolean breakConnection, Action`1 wrapCloseInAction)
+End of stack trace from previous location where exception was thrown
+C# スタックトレース　読み方
+
+
 ---
 
 ## 現在進行形
