--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -55,7 +55,7 @@
 資産の数量や価値等を実際に確認すること。  
 
 棚卸しの目的  
-①実際の在庫(数量)を確認して、帳簿上記録された数量と寺師合わせること。  
+①実際の在庫(数量)を確認して、帳簿上記録された数量と照らし合わせること。  
 ②棚卸資産の状態需要を見て、商品の価値が取得価格より低下していないか確認すること。  
 
 実際に確認して、会計上資産価値を金額として確定することが目的。  
@@ -284,3 +284,32 @@ Wikiの説明がいちいち面白い。
 ---
 
 ## 雑記
+
+給料20いかないのはきついよねー。
+
+縁が切れた状態でつながり続けたら、いずれ腐る。
+それが結論。
+
+しかし、私のような人間が他に行けるのだろうか。
+それが心配だ。
+頑張ることはできるけど、それだけだからな。
+
+
+なぜ勉強するのか。
+
+楽しいから。
+将来のため。
+使える人間であり続けるため。
+
+
+知りたいという欲求は一時的なモノではない。
+知ったら満たされてしまうので、すぐに枯渇しそうではあるが、この仕事をしている限り、知りたいことが尽きることはないだろう。
+今日の朝も、昨日はあんなに調べたから、知りたいことがなくなってしまったと思ったが、そうでもなかった。
+すぐに知りたいこと、検証したいことが出てきた。
+なので心配することはなさそうだ。
+
+
+
+スマホで取った写真をpdfにするのは容易いようだ。
+アマゾンのブラックフライデーは26から。
+
