--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -67,6 +67,7 @@ etc...
 ### ウェルノウンポート  
 
 都度メモ  
+22 : SSH
 
 ### /etc/servicesファイル  
 
@@ -501,7 +502,7 @@ nameserverの指定は3台まで。
 domainとsearchはどちらか片方を指定する。  
 両方指定した場合は後のほうが有効になる。  
 
-#### ドメイン
+### ドメイン
 
 <https://t-tel.net/domain/092/>  
 
@@ -635,6 +636,78 @@ EximとPostfixはSendmailに互換性がある。
 ・newaliasesコマンド  
 ・mailqコマンド  
 ・~/.forwardファイル  
+
+### ローカルユーザー宛のメールが格納されるディレクトリ
+
+Sendmail : /var/spool/mail  
+Exim : /var/mail  
+Postfix : /var/mail  
+
+### 転送することが出来なかったメールを置くデフォルトのキューディレクトリ
+
+Sendmail : /var/spool/mqueue  
+Exim : /var/spool/exim/input  
+Postfix : /car/spool/postfix/deferred  
+
+### /etc/aliasesファイル
+
+メールアドレスの別名を設定するファイル。  
+
+### sendmailコマンド
+
+メールを送信するコマンド。  
+CUIのMUAであるmalix,muttで利用する。  
+
+``` txt : 実行例
+sendmail yuki@mylpic.com < 送信する本文を格納したファイル
+```
+
+### newaliasesコマンド
+
+メールアドレスの別名を設定するファイルとして、エイリアスファイル(/etc/aliases)とエイリアスデータベースファイル(/etc/aliases.db)がある。  
+このうちの、**エイリアスデータベースファイルを更新するコマンド**。  
+エイリアスデータベースファイルは更新してもすぐには反映されないので、newaliasesコマンドを叩いて変更を反映させる必要がある。  
+因みにエイリアスファイルはSendmail,Postfixの起動時にのみ、読みこまれる。  
+
+エイリアスデータベースファイルがあれば、そちらを参照し、無ければエイリアスファイルが参照される。  
+Eximはエイリアスデータベースファイルを参照しない。  
+newaliasesコマンドは使えるが、それはSendmailとの互換性のためだけ。  
+
+Sendmail,Postfix : エイリアスファイル、エイリアスデータベースファイル  
+Exim : エイリアスファイル  
+
+``` txt
+別名 : 転送アドレス1,転送アドレス2,転送アドレス3
+```
+
+### mailqコマンド
+
+MTAが転送できなかったメールのキューを見るためのコマンド。  
+全MDA(Sendmail,Postfix,Exim)で使用可能。  
+
+### ~/.forwardファイル
+
+ユーザー受信メールのリダイレクトを行いたい時に設定するファイル。  
+自分のホームディレクトリの下に`.forward`ファイルを作成して、転送先メールアドレスを記述する。  
+
+``` txt
+mana@example.com
+mana@mylpic.com
+```
+
+自分宛のメールをmana@example.comとmana@mylpic.comに転送する。  
+
+因みにファイル名やディレクトリが「.(ドット)」から始まるのは隠しファイルや隠しフォルダ。  
+`~/`はホームディレクトリを表す。
+
+### オープンリレー
+
+外部からのメールを制限することなく他のドメインに中継する事。  
+そのままではスパムの踏み台にされるので、以下の制限を設定する。  
+①外部からのメールはローカルドメイン宛のメールだけを受け取り、他のドメインへ中継しない。  
+②内部ネットワークからのメールだけを他のドメインに中継する。  
+
+因みに「外部からの名前解決リクエストに対して制限することなく答えを返すこと」をオーブンリゾルバという。  
 
 ---
 
