--- a/LPIC/102/12.セキュリティ.md
+++ b/LPIC/102/12.セキュリティ.md
@@ -1,1 +1,372 @@
 # 12.セキュリティ
+
+## ホストレベルのセキュリティ
+
+・スーパーサーバー  
+・/etc/xinetd.confファイル  
+・/etc/xinetd.dディレクトリ  
+
+### スーパーサーバー
+
+サーバープログラムを管理するプログラム。  
+必要な時だけ個々のサーバープログラムを起動する。  
+→メモリなどのシステムリソースを効率的に使うことが出来る。  
+
+即応性が求められるサービスはそのサービス自体で監視すべき(スタンドアロン)  
+Webサーバー,メールサーバ,etc...  
+
+FTP,Telnetなど、頻度が高くないものはスーパーサーバー経由での接続に適している。  
+
+代表的なスーパーサーバー  
+inted,xinted  
+
+### xinetd
+
+`/etc/xinted.confファイル` : xintedの全体的な設定を行うファイル  
+`/etc/xinted.dディレクトリ` : サービスごとの設定ファイルを格納するディレクトリ  
+
+### TCP Wrapper
+
+システムに常駐する、外部からのTCP/IP接続のアクセス制御を行うプログラム。  
+標準の常駐プログラム名(デーモン名)は**tcpd**  
+サービス要求を受け取った後、設定に基づいてチェックを行い、接続が許可された場合はそれぞれのサーバープログラムに処理を引き渡す。  
+
+設定ファイル  
+/etc/hosts.allow  
+/etc/hosts.deny  
+
+### lsofコマンド
+
+プロセスによってオープンされているファイルの一覧を表示するコマンド  
+引数にファイル名をした場合、そのファイルをオープンしているプロセスを表示する。  
+
+``` txt
+lsof [オプション] [ファイル名]
+
+オプション
+-i : オープンしているポートとプロセスを表示する。
+-i:ポート番号 : 指定のポートをオープンしているプロセスを表示する。
+-i:サービス名 : 指定のサービスをオープンしているプロセスを表示する。
+-p プロセスID : 指定したプロセスがオープンしているファイルを表示する。
+-P : ポート番号をサービス名に変換せず、数値のままで表示する。
+```
+
+### nmapコマンド
+
+ポートスキャンをするコマンド  
+
+``` txt
+nmap 対象ホスト
+
+nmap www.emxample.com
+```
+
+### fuserコマンド
+
+ポートを開いているプロセスを調べるコマンド  
+
+``` txt
+fuser -n tcp 8080
+```
+
+### SUIDの確認
+
+SUIDが設定されているファイルを把握しておく必要がある。  
+定期的にチェックすべき。  
+
+SUIDが設定されているファイルを検索するコマンド  
+`find / -perm -u+s -ls`  
+
+---
+
+## ユーザーに対するセキュリティ管理
+
+### changeコマンド
+
+ユーザーのパスワードの有効期限を表示・変更するコマンド。  
+引数を設定しないで実行した場合、対話モードになる。  
+
+``` txt
+chage [オプション] [ユーザー名]
+```
+
+### /etc/nologinファイル
+
+ユーザーのログインを禁止するファイル  
+これが存在するだけでルートユーザー以外のログインは出来なくなる。  
+中身は空でもいいが、書いた内容は一般ユーザーがログインしようとしたときに表示される。  
+
+### suコマンド
+
+一時的に別のユーザーになるコマンド  
+別の実行ユーザーIDと実行グループIDを持つ新たなシェルを起動するコマンド  
+
+``` txt
+su [オプション] [-] ユーザー名
+
+-あり : 直接ログインしたときと同様の動作を行う。
+カレントディレクトリは新しいユーザーのホームディレクトリとなる。
+環境変数が全て初期化される。
+
+-なし : 現在の環境をそのままにしてユーザーだけを切り替える。  
+```
+
+### sudoコマンド
+
+別のユーザーの権限でプログラムを実行するためのコマンド  
+大抵はrootユーザーとして実行する場合に使われる。  
+
+### ulimitコマンド
+
+ユーザーが利用できるリソースを制御するコマンド
+
+``` txt
+ulimit [オプション[リミット]]
+
+-a
+-c サイズ
+-f サイズ
+-n 数
+-u プロセス数
+-v サイズ
+
+```
+
+---
+
+## OpenSSH
+
+SSHプロトコルを利用するためのソフトウェア。  
+SSHサーバーおよびSSHクライアントを含む。  
+SSHを利用するために、現在世界で最も使われているSSH実装。  
+
+[インフラエンジニアじゃなくても押さえておきたいSSHの基礎知識](https://qiita.com/tag1216/items/5d06bad7468f731f590e)  
+
+### SSH(Secure Shell)
+
+暗号や認証の技術を利用して、安全にリモートコンピュータと通信するためのプロトコル。  
+ポート番号 : 22  
+
+sshd : SSHサーバーの機能を提供するデーモン  
+/etc/ssh/sshd_config : sshdの設定ファイル  
+
+### sshコマンド
+
+SSHを使ってリモートホストにログインするためのコマンド  
+
+``` txt
+ssh [[ログインユーザー@] ホスト]
+
+-p ポート番号 : ポート番号を指定する
+-l ユーザー名 : 接続するユーザーを指定する
+-i ファイル名 : 秘密鍵ファイルを指定する
+
+sv1.lpic.jpにSSHで接続する。
+ssh sv1.lpic.jp
+
+studentユーザーとしてsv1.lpic.jpにSSHで接続する。
+ssh student@sv1.lpic.jp
+```
+
+### ホスト認証
+
+クライアントがサーバーの正当性を確認するための認証。  
+①クライアントがサーバーにSSH接続する。
+②サーバーがクライアントに公開鍵を送信する。
+③クライアントは送られてきた公開鍵の正当性をチェックする。
+
+ホスト認証ののち、ユーザー認証を行う。  
+接続先がなりすましだった場合、警告が出る。  
+ユーザーが接続先の正当性を確認するための認証がホスト認証というわけ。  
+
+### 公開鍵認証
+
+### ssh-keygenコマンド
+
+公開鍵と秘密鍵の鍵ペアを作成するコマンド  
+
+``` txt
+ssh-keygen [オプション]
+
+-t タイプ : 
+-p : 
+-f ファイル名 :
+-R ホスト名 : 
+-b ビット長 :
+
+DSAで鍵ペアを作成
+ssh-keygen -t dsa
+```
+
+パスフレーズ  
+秘密鍵を利用する際の認証用文字列。  
+
+### ~/.ssh/内のファイル
+
+#### authorized_keys  
+
+接続を許可する公開鍵を登録しておくサーバー側のファイル。  
+①接続先リモートホストのホームディレクトリ内に「.ssh」ディレクトリを作成。  
+②その中にauthorized_keysファイルを作成して、そこに公開鍵をコピーして登録する。  
+
+#### config
+
+SSH接続の情報を書くファイル。  
+
+#### id_rsa
+
+ssh-keygenで生成した秘密鍵。  
+
+#### id_rsa.pub
+
+ssh-keygenで生成した公開鍵。  
+
+#### known_hosts
+
+過去に接続したことがあるサーバー  
+
+### scpコマンド
+
+SSHの仕組みを使い、ホスト間で安全にファイルをコピーするコマンド  
+
+``` txt
+scp 
+```
+
+---
+
+## GnuPGによる暗号化
+
+### GnuPG(GNU Privacy Guard)
+
+公開鍵暗号方式を使って、ファイルの暗号化や復号をしたり、電子署名をしたりすることができるオープンソースソフトウェア。  
+
+### gpgコマンド
+
+共通鍵を使ったファイルの暗号化
+
+gpg -c ファイル名
+
+secret.txtファイルを暗号化
+`gpg -c secret.txt`
+
+公開鍵を使ったファイルの暗号化
+
+公開鍵のエクスポート
+
+``` txt
+gpg -o 出力ファイル名 -a --export 自分のメールアドレス
+```
+
+公開鍵のインポート
+
+``` txt
+gpg --import pubkey
+```
+
+ファイルの暗号化
+
+```txt
+gpg -e -a -r 送り先のメールアドレス 暗号化するファイル名
+```
+
+ファイルの復号
+
+```txt
+gpg important.txt.asc
+```
+
+ファイルの署名
+
+```txt
+pgp -o sample.sig --sign gpg.log
+```
+
+---
+
+## 小豆本問題
+
+---
+
+### 1 ○
+
+TCP Wrapperを使ってアクセス制御している。  
+/etc/hosts.allow「sshd : 192.168.2.」  
+/etc/hosts.deny「ALL:ALL」  
+このことの説明。  
+
+→  
+B : 192.168.2.5のホストからSSH接続ができる。  
+
+ホワイトリスト→ブラックリスト  
+ホワイトリストに当てはまったら即OK。  
+ホワイトリストに無かったらブラックリストを見る。  
+ブラックリストにあったら即OUT。  
+
+---
+
+### 2 ×
+
+/etc/nologinファイルを作成するとどうなるか？  
+
+→  
+C : /etc/nologinファイルに記述されたユーザーはログインできなくなる。  
+
+A : 全てのユーザーはログイン出来なくなる。  
+まじか。覚え間違えだったかな。  
+ファイルを作って、その中でユーザーを指定するものだと思っていたのだが、勘違いだったようだ。  
+
+空のファイルで良いが、メッセージを記述すると、ログインしたときのそのメッセージが表示されるらしい。  
+なるほどね。  
+
+---
+
+### 3 ○
+
+パスワードの有効期限を表示、設定するコマンドは？
+
+→  
+change  
+
+---
+
+### 4 ○
+
+SSHを使って、ホストa.example.netに、ユーザーstudentとしてログインしたい。  
+実行するコマンドは？  
+
+→  
+`ssh student@a.example.net`  
+Eかな。  
+
+正解。  
+`ssh ログインユーザー名@ホスト名`  
+ユーザー名を省略した場合、ローカルホストでSSHを実行したユーザーのユーザー名が指定されたことになる。  
+
+---
+
+### 5 ×
+
+SSHを使ってリモートホストへ公開鍵認証でログインできるよう設定中。  
+①接続先リモートホストのホームディレクトリ内に「.ssh」ディレクトリを作成。  
+②その中に___ファイルを作成。そこに公開鍵をコピーして登録した。  
+ファイル名は？  
+
+→  
+`~/.ssh/authorized_keys`  
+なのでファイル名は`authorized_keys`  
+登録元は？  
+
+---
+
+### 6 ○
+
+GPGを使って暗号化されたファイルsecret.ascが送られてきた。  
+送付元の公開鍵はすでに登録済み。  
+復号のコマンドは？  
+
+→  
+`gpg secret.asc`  
+ということでA  
+
+当たった。  
