orderby,thenby 勉強リスト更新

--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -139,12 +139,12 @@ LEFT OUTER JOIN B ON oya
 でよいのでは説。
 
 
-order by then by
 領収名
 領収　とは
 標準原価法
 会計用語
 赤伝
+原簿
 
 縁が切れた
 https://damasarenaiwa.com/2018/01/29/en-3/
@@ -167,9 +167,24 @@ at System.Data.SqlClient.SqlConnection.OnError(SqlException exception, Boolean b
 End of stack trace from previous location where exception was thrown
 C# スタックトレース　読み方
 
+AHCI
+
+しりあるATA
+https://www.pro.logitec.co.jp/houjin/usernavigation/hddssd/20200417/
+
+ha proxy
+
+jp1とは
+プロプライエタリ
+https://ejje.weblio.jp/content/proprietary
+
 ---
 
 ## 現在進行形
+
+・order by then by
+LINQ OrderBy 複数
+<https://www.webdevqa.jp.net/ja/c%23/%E8%A4%87%E6%95%B0%E3%81%AE%E3%83%95%E3%82%A3%E3%83%BC%E3%83%AB%E3%83%89%E3%82%92%E6%8C%81%E3%81%A4linq-orderby/969798799/>
 
 ---
 
