セキュリティ進めた

--- a/LPIC/102/12.セキュリティ.md
+++ b/LPIC/102/12.セキュリティ.md
@@ -22,8 +22,55 @@ inted,xinted
 
 ### xinetd
 
+ネットワークからのリクエストを受け付けるデーモン。  
 `/etc/xinted.confファイル` : xintedの全体的な設定を行うファイル  
 `/etc/xinted.dディレクトリ` : サービスごとの設定ファイルを格納するディレクトリ  
+
+<https://www.express.nec.co.jp/linux/distributions/knowledge/network/xinetd.html>  
+xinetd は、単体で inetd + TCP wrapper(tcpd) の機能を持っているだけでなく、よりきめ細かで自由度の高い設定を行なうことができる。  
+
+``` txt
+/etc/services
+ポート番号→サービス名
+23 telnet
+
+/etc/xinetd.conf
+サービス名→デーモン名
+telnet in.telnetd
+```
+
+### /etc/xinetd.confファイル
+
+### /etc/xinted.dディレクトリ
+
+/etc/xinted.d以下の設定ファイルの主なパラメーター  
+
+``` txt
+disable : サービスの有効/無効
+socket_type : 通信のタイプ(TCP:stream , UDP:dgram)
+wait : ウェイトタイム
+user : サービスを実行するユーザー
+server : サーバープログラム(デーモン)へのフルパス
+server_args : サーバープログラム(デーモン)に渡す引数
+log_on_failure : 接続を拒否した時にログに記録する内容
+nice : 実行優先度
+only_from : 接続を許可する接続元
+no_acccess : 接続を拒否する接続元
+access_time : アクセスを許可する時間帯
+```
+
+/etc/xinetd.d/time-streamの例  
+
+``` txt
+service time
+{
+    disable = no
+    id = time-stream
+    type = INTERNAL
+    wait = no
+    socket_type = stream
+    only_from = 172.16.0.1
+```
 
 ### TCP Wrapper
 
@@ -57,9 +104,10 @@ lsof [オプション] [ファイル名]
 
 ``` txt
 nmap 対象ホスト
-
-nmap www.emxample.com
 ```
+
+使用例  
+`nmap www.emxample.com`  
 
 ### fuserコマンド
 
@@ -115,6 +163,51 @@ su [オプション] [-] ユーザー名
 
 別のユーザーの権限でプログラムを実行するためのコマンド  
 大抵はrootユーザーとして実行する場合に使われる。  
+
+``` txt
+sudo [オプション] [-u ユーザー名] コマンド
+
+オプション
+-l : 許可されているコマンドで表示する
+-i : 変更先ユーザーでシェルを起動する(ログイン時の処理を行う)
+-s : 変更先ユーザーでシェルを起動する
+
+-u ユーザー : rootではなく指定したユーザーでコマンドを実行する
+ユーザー名を省略するとrootユーザーで実行する。
+```
+
+### visudoコマンド
+
+sudoコマンドの利用設定をするコマンド。  
+/etc/sudoersファイルを開く。  
+rootユーザーのみ実行可能。  
+
+### /etc/sudoersファイル
+
+sudoコマンドを実行できるユーザーの設定を行うファイル。  
+sudoコマンド実行時、sudoコマンドはこのファイルを参照してユーザーが実行権限を持っているかどうか判定を行う。  
+エディターで直接、このファイルを開いてはいけないらしい。  
+
+``` txt
+書式
+ユーザー名 ホスト名=(実行ユーザー名) [NOPASSWD:]コマンド
+
+
+ユーザー名 : コマンドの実行を許可するユーザー名かグループ名、もしくはALL
+ホスト名 : 実行を許可するホスト名か、IPアドレス、もしくはALL
+実行ユーザー名 : コマンド実行時のユーザー名(省略時はroot)、もしくはALL
+コマンド : 実行を許可するコマンドのパス、もしくはALL
+NOPASSWD: : 指定すると、コマンド実行時にパスワードを問われない
+```
+
+studentユーザーのみshutdownコマンドが実行できるように設定する  
+`student ALL=(ALL) /sbin/shutdown`  
+
+studentユーザーに対し、全てのroot権限が必要なコマンドの実行を許可する。  
+`student ALL=(ALL) ALL`  
+
+wheelグループに対し、全てのroot権限が必要なコマンドをパスワードなしで実行できるようにする。  
+`%wheel ALL=(ALL) NOPASSWD:ALL`
 
 ### ulimitコマンド
 
