--- a/LPIC/102/12.セキュリティ_問題.md
+++ b/LPIC/102/12.セキュリティ_問題.md
@@ -13,47 +13,206 @@ A : SU
 
 ---
 
-## 1
+## 2 ○
+
+指定したユーザー権限で特定のコマンドを実行するコマンド。1つ  
+
+→  
+SUDO  
+言わずもがな。  
 
 ---
 
-## 1
+## 3 ○
+
+あるユーザーがroot権限でアプリを実行できるかどうか判断する時、sudoが読みこむ設定ファイルは何ですか？1つ。  
+
+→  
+/etc/sudoers  
+問題2をまとめるついでにやったので問題なし。  
+まぁ、これは問題ないのだが、中に何を設定するのかは問題だ。  
 
 ---
 
-## 1
+## 4 ○
+
+xinetdの設定ファイル名を絶対パスで記述してください。  
+
+→  
+/etc/xinetd.conf  
+確かこれしかないだろうなと思ったら当たった。  
+
+その前にxinetdって何だっけ？  
+→ネットワークからのリクエストを受け付けるデーモン。  
+こいつがリクエストを受け取って、登録されているサービスを起動するんだっけかな。  
+いわゆるスーパーサーバープログラムって奴だ。  
 
 ---
 
-## 1
+## 5 ×
+
+xinetdの設定ファイルを編集しました。  
+xinetdデーモンの再起動をせずにシグナルをxinetdに送ることで編集を有効にしたい。  
+killあるいはpkillコマンドの引数で指定するシグナルの名前を記述してください。  
+
+→  
+killコマンドの復習をしないとねぇ。  
+忘れたので答え見ますよ。  
+
+HUP or SIGHUP
+
+→  
+
+``` txt
+killコマンド
+プロセスIDを指定してシグナルを送るコマンド。
+
+kill -[シグナル名またはシグナルID] PID
+kill -s [シグナル名またはシグナルID] PID
+kill -SIGシグナル名 PID
+```
+
+``` txt
+pkillコマンド
+プロセス名を指定してシグナルを送るコマンド。
+
+pkill [オプション] [シグナル] プロセス名
+
+オプション
+-u ユーザ名 : 指定した実行ユーザーによるプロセス対象とする。
+-g グループ名 : 指定したプロセスグループのいずれかに属するプロセスを対象とする。
+```
+
+``` txt
+シグナル名 シグナルID 説明
+HUP   1  ハングアップ（端末との接続が切断）
+INT   2  キーボードからの割り込み
+QUIT  3  キーボードからのプロセスの中止
+KILL  9  強制終了
+TERM 15  通常終了
+CONT 18  一時停止中のプロセスを再開
+STOP 19  一時停止
+```
+
+実行例  
+`pkill -HUP xinetd`  
+`kill -HUP xinetdのプロセス名`  
+
+なんでハングアップで有効になるんだ？  
+うーん。そういうものと覚えたほうがいいのかねぇ。
 
 ---
 
-## 1
+## 6 ×
+
+xinetd設定ファイルで、サービスを提供するために使われるネットワークアドレスを指定する属性名を記述してください。  
+
+→  
+知らん。  
+重要度も低い問題だ。答え。  
+あー。小豆本の方で面倒だからって飛ばした部分だ。  
+まぁ、いい復習の機会になったじゃないか。  
+
+`only_from`  
+
+一回まとめて見たけど、問題文がチンプンカンプンだ。  
 
 ---
 
-## 1
+## 7 ○
+
+TCP Wrepperによって特定のサービスだけを許可したい場合、設定するファイルはどれですか？3つ。  
+
+→  
+3つって選択肢の事だよな？  
+hosts.allowとdeny何だけど、それぞれ1つとどっちもの3つって事なのか？  
+ならB,C,Dだがそれでいいのか？  
+
+うーん。合ってた。  
+なんとも腑に落ちないな。  
 
 ---
 
-## 1
+## 8 ○
+
+TCP Wrapperによるアクセス制御でアクセスの拒否を設定るファイルは何ですか？1つ。  
+
+→  
+/etc/hosts.deny  
+まぁ・・・特にないわ。  
 
 ---
 
-## 1
+## 9 ×
+
+一般的にTCP Wrapperで保護されないものはどれか？1つ。  
+
+→  
+auth  
+
+プロトコルでないものを選べばいいのでは？  
+あ!プロトコルじゃなくてサービスじゃないものだ。  
+ftpってプロトコルであり、起動するサービスなわけだよな。  
+httpだけがプロトコルでサービスじゃないからこいつが答えだ。  
+
+どうやら俺の推理は外れたようだ。  
+
+libwrapによるTCP Wrapperで保護されるのは、xinetdから起動されるサービスとlibwrapを利用したサーバが提供するサービス。  
+httpはApatchWebサーバーの管轄。  
+libwrapを使わない独自のアクセス制御機構を持つ。  
 
 ---
 
-## 1
+## 10 ×
+
+公開鍵暗号と公開鍵認証について正しい説明3つ。  
+
+→  
+×A : 秘密鍵と公開鍵は1対多  
+○B : 公開鍵は秘密鍵から算出される  
+○C : 公開鍵で暗号化し、秘密鍵で復号する  
+○F : 認証では秘密鍵で認証データを作成し、公開鍵で検証する  
+
+→  
+まさか間違えるとは。  
+1対多じゃないの？  
+秘密鍵って公開鍵から作られるの？割と知らなかったんだが？  
+
+配布のコストとしては1体多だが、対応としては1体1ということか？
+まぁ、風呂あがってから復習だな。  
 
 ---
 
-## 1
+## 11 ○
+
+ほすとexamhostにログインするネットワークコマンドの内、通信路を暗号化するものはどれですか？1つ。  
+
+→
+ssh examhost  
+まさかこれだけか？  
+これだけだった・・・。  
 
 ---
 
-## 1
+## 12 ○
+
+sshのknown_hostsファイルには何が格納されているか？1つ。  
+
+→
+一度接続したホストの情報。  
+のはずなんだが、もっと具体的な内容だった。  
+だけど、一度接続したホスト情報に基づけば、Aしかない。
+
+A : サーバーのホスト名、IPアドレス、公開鍵  
+
+イエーイ。正解。  
+
+
+
+今日はここまでを目標とする。  
+うーん。  
+意外と進まないぞ。  
+今日はこれだけで終わりそう。  
 
 ---
 
