--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -178,6 +178,10 @@ jp1とは
 プロプライエタリ
 https://ejje.weblio.jp/content/proprietary
 
+参照型の変数を宣言した状態のメモリの状態
+newして代入したら、参照先をバインドするのはいいとして、宣言した変数ってメモリ上のどこに配置されるの？
+ただ宣言しただけの状態ってメモリ上ではどういう状態になっているの？
+
 ---
 
 ## 現在進行形
@@ -185,6 +189,12 @@ https://ejje.weblio.jp/content/proprietary
 ・order by then by
 LINQ OrderBy 複数
 <https://www.webdevqa.jp.net/ja/c%23/%E8%A4%87%E6%95%B0%E3%81%AE%E3%83%95%E3%82%A3%E3%83%BC%E3%83%AB%E3%83%89%E3%82%92%E6%8C%81%E3%81%A4linq-orderby/969798799/>
+
+タプルで複数の値を指定できるのはC#いくつから？4.8では使える構文なのか？
+.OrderBy(o => o.aa == true  ? (o.aa,o.bb) : (o.aa,o.cc))みたいな事ってできるのか？
+
+調べたくてたまらないけど、疲れて頭がぐるぐるしてる。
+今日はこれくらいにしてまた明日、会社に行く前にやる。
 
 ---
 
