--- a/BookKeeping/用語など.md
+++ b/BookKeeping/用語など.md
@@ -125,3 +125,37 @@
 
 実際に確認して、会計上資産価値を金額として確定することが目的。  
 年に1回、決算時において棚卸し作業が必要。  
+
+---
+
+## 扶養とは？
+
+助け養うこと。生活できるように世話をすること。  
+自分一人の力で生活することが難しいため、家族や親族から経済的な援助を受けること。  
+
+## 控除とは？
+
+金額を差し引くこと。  
+大抵の場合は税金を安くしてくれる優遇制度の事を指す。  
+
+### 控除の種類
+
+所得控除→所得から一定の金額を差し引くことで税金を安くしてくれる制度  
+配偶者控除→配偶者がいれば所得から一定の金額を差し引いて税金を安くしてくれる制度  
+扶養控除→養うべき家族がいれば、所得から一定の金額を差し引いて税金を安くしてくれる制度  
+→例えば、妻の所得が103万円以下で夫の稼ぎが900万くらい以下なら38万円満額の扶養控除が受けられるっぽい。  
+
+そのほかにも色々あるけど、代表的なのはこんなところじゃないかな。  
+因みによく聞く103万円ってのは所得税が発生するラインが103万円だからっぽい。  
+
+## 従食(じゅうしょく)とは？まかないとは？
+
+[ファミレス各社の従食（まかない）どこが豪華で美味しい？](https://tenshoku-restaurants.com/blog/272)  
+
+従食(じゅうしょく)とは「従業員食事割引制度・食事補助」といった従業員の食事に対して会社側がいくらか負担するものです。  
+簡単にいうと「お客様に提供してる料理を安く食べることができる」制度です。  
+一方「まかない」は、一般的にお店から「無料で従業員に提供される食事」とされています。  
+
+→  
+従食は「有料」  
+まかないは「無料」  
